	thus obsoleting use of :winrun or :windo for this purpose (they still
	work, the new way is a simpler and more obvious one).  This is related to
	commands executed during vifmrc processing (not those in the right-hand
	side of mappings, commands, etc.).

	Display lower bound on item count in status bar progress messages (e.g. on
	:grep).

	Fixed resetting "vborder" of 'fillchars' after it has been set to
	something (as in `:set fillchars=vborder:\* fillchars&`).

	Fixed crash after color scheme load failure possible in scenarios where
	file name specific highlights are used.

	Fixed use of uninitialized value which could affect whether pattern is
	matches whole path or only its name part.

	Fixed tests failures when run with root privileges.  Thanks to Ondrej
	Novy (a.k.a. onovy).

	Fixed running backgrounded commands with non-latin characters on
	Windows (that end with " &", should be OK to just drop it on Windows
	and get correct behaviour on 0.8).  Thanks to Stas Malavin.

	Fixed (in some cases) running of executables with spaces in paths on
	Windows with cmd.  Thanks to Stas Malavin.

	Fixed choosing user vs. default shell on Windows (was reversed), related
	to %S, %i and alike macros.

	Fixed loosing view sorting on failed attempt to load custom view.  Thanks
	to filterfalse.

	Fixed not restoring 'sort' value on leaving unsorted custom view.

	Fixed possible crash on startup when 'vifminfo' includes "options".
	Thanks to Aurelio Sanabria (a.k.a. Sufrostico).

	Fixed checking for symbolic link target on target change commands in
	custom view.

	Fixed slashes type on Windows on loading custom view with relative paths.

	Fixed unstable extension sorting for dot files.  Patch by Cosmin
	Popescu (a.k.a. cosminadrianpopescu).

	Fixed check for availability of FUSE mount point.  Thanks to fogine.

	Fixed small memory leak and possible corruption after :sync! localopts.

	Fixed checking for changes in charset options on :set (without arguments),