@@ -67,8 +67,8 @@ char prompt_msg_custom(const char title[], const char message[],
 
 /* Draws centered formatted message with specified title and control message on
  * error_win. */
-void draw_msgf(const char title[], const char ctrl_msg[], const char format[],
-		...);
+void draw_msgf(const char title[], const char ctrl_msg[], int recommended_width,
+		const char format[], ...);
 
 /* Checks with the user that deletion is permitted.  Returns non-zero if so,
  * otherwise zero is returned. */
